--- a/readme
+++ b/readme
@@ -1,6 +1,8 @@
 # Install Thrift
 ## Ubuntu
   sudo apt install thrift-compiler libthrift-c-glib-dev
+## RedOS8
+  sudo dnf install thrift*
 
 # Gen stubs for C
   thrift --gen c_glib my.thrift
